@startuml Modèle Logique de Données

skinparam linetype polyline
skinparam nodesep 30
skinparam ranksep 40

title Modèle Logique de Données (MLD) - Tables SQL

class utilisateur {
  + **id_utilisateur** : INT <<PK>>
  --
  nom : VARCHAR(100) NOT NULL
  prenom : VARCHAR(100) NOT NULL
  email : VARCHAR(255) UNIQUE NOT NULL
  mot_de_passe : VARCHAR(255) NOT NULL
  role : ENUM('utilisateur','bibliothecaire','administrateur')
  date_inscription : DATETIME DEFAULT NOW()
  ..
  INDEX(email)
  INDEX(role)
}

class ressource {
  + **id_ressource** : INT <<PK>>
  --
  type : ENUM('livre','film') NOT NULL
  titre : VARCHAR(255) NOT NULL
  auteur_realisateur : VARCHAR(255) NOT NULL
  annee : SMALLINT NOT NULL
  resume : TEXT
  image_url : VARCHAR(255)
  pays : VARCHAR(100)
  date_ajout : DATETIME DEFAULT NOW()
  ..
  INDEX(type, titre, date_ajout)
}

class livre {
  + **id_ressource** : INT <<PK,FK>>
  --
  isbn : VARCHAR(13) UNIQUE NOT NULL
  editeur : VARCHAR(255) NOT NULL
  nombre_pages : INT NOT NULL
  prix : DECIMAL(10,2)
  langue : VARCHAR(50) NOT NULL DEFAULT 'Français'
  ..
  INDEX(isbn)
}

class film {
  + **id_ressource** : INT <<PK,FK>>
  --
  duree : INT NOT NULL
  support : ENUM('DVD','Blu-ray','Streaming') NOT NULL
  langue : VARCHAR(50) NOT NULL
  sous_titres : VARCHAR(255)
  propose_par : ENUM('Arte','UniversCiné','CNC','Médiathèque numérique') NULL
  casting : TEXT
}

class genre {
  + **id_genre** : INT <<PK>>
  --
  nom : VARCHAR(100) UNIQUE NOT NULL
}

class theme {
  + **id_theme** : INT <<PK>>
  --
  nom : VARCHAR(100) UNIQUE NOT NULL
}

class ressource_genre {
  + **id_ressource** : INT <<PK,FK>>
  + **id_genre** : INT <<PK,FK>>
}

class ressource_theme {
  + **id_ressource** : INT <<PK,FK>>
  + **id_theme** : INT <<PK,FK>>
}

class evaluation {
  + **id_evaluation** : INT <<PK>>
  --
  id_utilisateur : INT <<FK>> NOT NULL
  id_ressource : INT <<FK>> NOT NULL
  note : DECIMAL(2,1) NOT NULL
  critique : TEXT
  date_evaluation : DATETIME DEFAULT NOW()
  ..
  UNIQUE(id_utilisateur, id_ressource)
  INDEX(id_ressource, note)
}

' Relations avec cardinalités
utilisateur "1" -- "0..*" evaluation : FK
ressource "1" -- "0..*" evaluation : FK
ressource "1" -- "0..1" livre : FK CASCADE
ressource "1" -- "0..1" film : FK CASCADE
ressource "0..*" -- "0..*" ressource_genre
genre "1" -- "0..*" ressource_genre : FK CASCADE
ressource "0..*" -- "0..*" ressource_theme
theme "1" -- "0..*" ressource_theme : FK CASCADE

note top of evaluation
  Contrainte UNIQUE :
  pas de doublons
end note

note top of livre
  ON DELETE CASCADE :
  suppression en cascade
end note

@enduml
